--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_downloader: ^1.10.1
   permission_handler: ^10.2.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
